# eagleeye

./: .gitignore  .gitmodules  CMakeLists.txt  EagleeyeCL_CODE.h  android_build.sh  android_build_with_ffmpeg.sh  android_build_with_ffmpeg_rk.sh  android_build_with_ffmpeg_rkchip.sh  android_build_with_rk.sh  android_build_with_rkchip.sh  build.sh  build_linux.sh  build_with_mace.sh  build_with_paddle.sh  build_with_snpe.sh  example.json  linux_arm64_v8a_build.sh  linux_arm64_v8a_build_with_ffmpeg_rk.sh  linux_arm64_v8a_build_with_rk.sh  linux_arm_build_with_ffmepg_rk.sh  linux_build.sh  linux_build_with_ffmpeg.sh  linux_build_with_ffmpeg_cuda.sh  linux_x86_64_build.sh  linux_x86_64_build_with_ffmpeg.sh  linux_x86_64_build_with_ffmpeg_cuda.sh  osx_build.sh  readme.md  s.json
cmake/: FindNumPy.cmake  FindPythonByEnv.cmake  Findpnglib.cmake
doc/: Android开发须知.md  EAGLEEYE DEMO集成.md  EAGLEEYE-APP开发.md  EAGLEEYE-APP集成.md  EAGLEEYE-CODEBOOK.md  EAGLEEYE-推断引擎接口.md  EAGLEEYE之Blob类.md  EAGLEEYE信号类型.md  EAGLEEYE单元测试.md  EAGLEEYE工具.md  EAGLEEYE异构计算.md  EAGLEEYE插件仓库介绍.md  EAGLEEYE插件框架.md  EAGLEEYE数据流框架.md  EAGLEEYE数据流框架的功能节点.md  EAGLEEYE数据流编程框架.md  EAGLEEYE编译指南.md  EAGLEEYE项目脚手架.md
doc/code/: project_2.cpp  project_3.cpp  project_4.cpp  project_5.cpp  project_6.cpp
eagleeye/algorithm/: FitCurves.cpp  FitCurves.h  GGVecLib.cpp  GraphicsGems.h  algorithm.cpp  algorithm.h  disjoint-set.h  filter.cpp  filter.h  fitting.cpp  fitting.h  homographymodel.cpp  homographymodel.h  hungarian.cpp  hungarian.h  imageprocess.cpp  imageprocess.h  llsp.cpp  llsp.h  nms.cpp  nms.h  qr_solver.cpp  qr_solver.h  ransac.h  saliency.cpp  saliency.h  segment.cpp  segment.h  spline.h  srm.cpp  srm.h
eagleeye/algorithm/opencl/: algorithm.cl
eagleeye/basic/: ApproxMath.h  Array.h  BGRAFlipHWC.cpp  BGRAFlipHWC.h  BGRARotateHWC.cpp  BGRARotateHWC.h  BGRFlipHWC.cpp  BGRFlipHWC.h  BGRRotateHWC.cpp  BGRRotateHWC.h  DataConvert.h  Dim.cpp  Dim.h  DynamicArray.h  FixedMatrixMath.cpp  Generator.cpp  Generator.h  Generator.hpp  Math.h  Matrix.h  Matrix.hpp  MatrixMath.cpp  MatrixMath.h  MatrixMath.hpp  MatrixMathCL.cpp  MetaOperation.h  Tensor.cpp  Tensor.h  Tensor.hpp  TensorX.cpp  TensorX.h  Variable.h  Variable.hpp  blob.cpp  blob.h  count_down_latch.h  spinlock.hpp  type.h
eagleeye/codegen/opencl/: encrypt_opencl_kernel.cc  encrypt_opencl_kernel.h
eagleeye/common/: CJsonObject.hpp  EagleeyeAffinity.cpp  EagleeyeAffinity.h  EagleeyeBGRAFlipHWC.cpp  EagleeyeBGRAFlipHWC.h  EagleeyeBGRARotateHWC.cpp  EagleeyeBGRARotateHWC.h  EagleeyeBGRFlipHWC.cpp  EagleeyeBGRFlipHWC.h  EagleeyeCL_CODE.h  EagleeyeCameraCenter.cpp  EagleeyeCameraCenter.h  EagleeyeColormap.hpp  EagleeyeDefines.h  EagleeyeFactory.cpp  EagleeyeFactory.h  EagleeyeFile.cpp  EagleeyeFile.h  EagleeyeGraph.cpp  EagleeyeGraph.h  EagleeyeIO.cpp  EagleeyeIO.h  EagleeyeIO.hpp  EagleeyeImageModule.cpp  EagleeyeImageModule.h  EagleeyeImageUti.cpp  EagleeyeImageUti.h  EagleeyeIni.cpp  EagleeyeIni.h  EagleeyeJava.h  EagleeyeLog.cpp  EagleeyeLog.h  EagleeyeMacro.h  EagleeyeMemory.cpp  EagleeyeMemory.h  EagleeyeMessage.h  EagleeyeMessageCenter.cpp  EagleeyeMessageCenter.h  EagleeyeModule.cpp  EagleeyeModule.h  (+34 more)
eagleeye/engine/: mace_run.cpp  mace_run.h  mace_run.hpp  model_engine.cpp  model_engine.h  model_run.h  nano_run.cpp  nano_run.h  nn_run.cpp  nn_run.h  paddle_run.cpp  paddle_run.h  paddle_run.hpp  proxy_run.h  py_interface.cpp  rknn_run.h  rknn_run.hpp  snpe_run.cpp  snpe_run.h  snpe_run.hpp  tensorrt_run.h  tensorrt_run.hpp  tf_run.cpp  tf_run.h  thread_pool.cpp  thread_pool.h  tnn_run.h  tnn_run.hpp
eagleeye/engine/nano/: nano.cpp  nano.h
eagleeye/framework/: EagleeyeTimeStamp.cpp  EagleeyeTimeStamp.h
eagleeye/framework/pipeline/: AnyMonitor.h  AnyNode.cpp  AnyNode.h  AnyPipeline.cpp  AnyPipeline.h  AnyRegister.cpp  AnyRegister.h  AnySignal.cpp  AnySignal.h  AnyUnit.cpp  AnyUnit.h  BooleanSignal.cpp  BooleanSignal.h  DynamicNodeCreater.h  DynamicPipelineCreater.h  EmptySignal.cpp  EmptySignal.h  GroupSignal.cpp  GroupSignal.h  JsonSignal.cpp  JsonSignal.h  (+12 more)
eagleeye/hardware/: rk.cpp  rk.h
eagleeye/ml/: gmm.cpp  gmm.h  kmeans.cpp  kmeans.h
eagleeye/port/: env.h
eagleeye/processnode/: AdaptorNode.cpp  AdaptorNode.h  Add.h  Add.hpp  AndroidCameraNode.cpp  AndroidCameraNode.h  AnyPlaceholder.cpp  AnyPlaceholder.h  AsynNode.cpp  AsynNode.h  AsynNode_backup.cpp  AsynNode_backup.h  AutoNode.cpp  AutoNode.h  AutoPipeline.cpp  AutoPipeline.h  CacheNode.cpp  CacheNode.h  CallbackNode.cpp  CallbackNode.h  ClassicalFilter.cpp  ClassicalFilter.h  ConditionNode.h  ConditionNode.hpp  ConsistenceNode.cpp  ConsistenceNode.h  ConstNode.cpp  ConstNode.h  CopyNode.cpp  CopyNode.h  CropNode.cpp  CropNode.h  DataSourceNode.h  DataSourceNode.hpp  DebugNode.cpp  DebugNode.h  DelayFetch.cpp  DelayFetch.h  DottingNode.cpp  DottingNode.h  (+129 more)
eagleeye/python/: requirements.txt
eagleeye/render/: AutoRenderRegion.cpp  AutoRenderRegion.h  GLUtils.cpp  GLUtils.h  HighlightShow.cpp  HighlightShow.h  ImageBlend.cpp  ImageBlend.h  ImageContainer.cpp  ImageContainer.h  ImageShow.cpp  ImageShow.h  RenderBase.cpp  RenderBase.h  RenderContext.cpp  RenderContext.h  RenderMapToCPU.cpp  RenderMapToCPU.h  RenderNode.cpp  RenderNode.h  RenderRegionNode.cpp  RenderRegionNode.h  ShapeNode.cpp  ShapeNode.h  YUVShow.cpp  YUVShow.h
eagleeye/tensorop/: imageop.cpp  imageop.h  tensorop.cpp  tensorop.h  tensorop.hpp
eagleeye/test/: testmatrix.h  testmatrixmath.h
eagleeye/ui/: ButtonView.cpp  ButtonView.h  ScrollView.cpp  ScrollView.h
env/: prepare_arm_cross_build_env_10.2.sh
scripts/: MANIFEST.in  main.py  requirements.txt  setup.py
scripts/None_plugin/: CMakeLists.txt  None_demo.cpp  None_plugin.cpp  None_plugin.h
scripts/scaffold/: Test.json  flags.py  help.py  main.py  prepare.py
scripts/templates/: project_demo.template  project_node_cpp.template  project_node_h.template  project_plugin_cmake.template  project_plugin_header.template  project_plugin_source.template
scripts/test_plugin/: CMakeLists.txt  build.sh  preprocess.cl  test_demo.cpp  test_plugin.cpp  test_plugin.h
(+301 files in other folders)
